完成前后端评论功能

--- a/src/assets/css/color.css
+++ b/src/assets/css/color.css
@@ -15,7 +15,7 @@
     /* 文章灰色字体 */
     --articleGreyFontColor: #616161;
     /* 评论背景颜色 */
-    --commentContent: #F7F9FE;
+    --content: #F7F9FE;
 
 
     /* 主题背景 */
